--- a/app/src/main/res/layout/fragment_netatalk_report_details.xml
+++ b/app/src/main/res/layout/fragment_netatalk_report_details.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="50dp"
     tools:context=".ui.reports.NetatalkReportDetailsFragment">
 
     <TextView
